#1886 closed bug (fixed)
Terminal won't get focus back after quiting app launched from Terminal
Reported by: | nutela | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | User Interface | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
Rev 24195 Set Mouse prefs to FFM with Warping. Start Terminal. Type Workspaces enter. Workspaces is started and get's focus (note mouse cursor stays -> bug, will file a another bug just for this), Press alt-w, Workspaces quits, mouse cursor is still above Terminal window but Terminal's tab is gray and not yellow -> bug.
Change History (4)
comment:1 by , 17 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:2 by , 17 years ago
Fixed already, I have to try it out then :) you are sure fast :)
I noticed other (bad) behavior too (rev 24195); when I right clicked the terminal 10 min ago, the terminal's tab went to gray even when the mouse was over the window (R5 does not do this, the tab stays yellow), when I moved the mouse the tab became yellow again. Also I noted that by pressing ctrl+tab I couldn't get focus to Tracker windows at all. The mouse did go *from* Tracker to other windows but not back to Tracker. Should I file a separate bug for this?
comment:3 by , 17 years ago
I just tested in R5; started the Terminal, started Workspaces from the Terminal. The Terminal's tab stayed yellow, pressing alt+w quit the Terminal (and Workspaces of course)
comment:4 by , 17 years ago
I hereby confirm that it does work. Sorry for the delay. Nice work and a warm thank you as always : )
The mouse cursor is not supposed to move in this case (only when you activate the windows using the Deskbar). Also, our FFM behaves like normal mouse mode when you don't actually move the mouse; that's not a bug but supposed to work like this.
Fixed in hrev24234: we now maintain a separate focus list, and will just choose the window that had focus before (no matter what order the windows are). So in your example, the Terminal will always be chosen as the next window having focus (before, it depended on the window order).