* Added a separate focus list that will contain all windows in the order   of the last focus. * When choosing a new focus window, this list is now used to find the   new focus window instead of just choosing the next window in the   workspace list. * With the normal mode mouse, this shouldn't change anything, but with   focus follows mouse turned on, this will behave much better if you   don't actually move the mouse - and it also fixes bug #1886.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24234 a95241bf-73f2-0310-859d-f6bbb57e9c96